working on it :d

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,27 +1,38 @@
 <header>
     <div class="hotel-res">
-        <img src="assets/header/hotel-res.svg" alt="hotel-res">
-        <span>
-            HOTEL-RESERVATION
-        </span>
+        <a href="">
+            <img src="assets/header/hotel-res.svg" alt="hotel-res">
+            <span>
+                HOTELRES.GE
+            </span>
+        </a>
     </div>
     <div class="navbar">
         <nav>
             <ul>
                 <li>
-                    <a routerLink="/home">{{ 'home' | translate }}</a>
-                </li>
-                <li>
+                    <i class="pi pi-building"></i>
                     <a routerLink="/hotels">{{ 'hotels' | translate }}</a>
                 </li>
                 <li>
+                    <i class="pi pi-heart"></i>
+                    <a routerLink="/home">{{ 'favorites' | translate }}</a>
+                </li>
+                <li>
+                    <i class="pi pi-question-circle"></i>
                     <a routerLink="/about">{{ 'about' | translate }}</a>
                 </li>
             </ul>
         </nav>
         <div class="user">
-            <p-button icon="pi pi-user" severity="help" (click)="toggleSidebar()"></p-button>
-            <p-button icon="pi pi-language" severity="help" [text]="true" (click)="switchLanguage()"></p-button>
+            <p-button icon="pi pi-user" [label]=" 'user' | translate " severity="help" (click)="toggleSidebar()"></p-button>
+            <div class="language">
+                <button [class.active]="activeLanguage === 'en'" (click)="switchLanguage('en')">EN</button>
+                <button [class.active]="activeLanguage === 'ge'" (click)="switchLanguage('ge')">GE</button>
+            </div>            
+        </div>
+        <div class="burger">
+            <app-burger></app-burger>
         </div>
         <div class="sidebar" [ngClass]="{'open': showSidebar}">
             <div class="close-button" (click)="toggleSidebar()">
@@ -29,27 +40,28 @@
             </div>
             <div class="content">
                 <img style="width: 200px;" src="https://www.svgrepo.com/show/509003/avatar-thinking-6.svg" alt="avatar">
-                <span>Login or create an account</span>
+                <span> {{ "logorcreate" | translate}} </span>
                 <div class="form">
                     <form [formGroup]="loginForm">
                         <div class="p-inputgroup">
                             <span class="p-inputgroup-addon">
                                 <i class="pi pi-envelope"></i>
                             </span>
-                            <input pInputText placeholder="Email" formControlName="email" />
+                            <input pInputText [placeholder]=" 'email' | translate " formControlName="email" />
                         </div>
                         <div class="p-inputgroup">
                             <span class="p-inputgroup-addon">
                                 <i class="pi pi-lock"></i>
                             </span>
-                            <input pInputText placeholder="Password" formControlName="password" />
+                            <input pInputText [placeholder]=" 'password' | translate " formControlName="password" />
                         </div>
-                        <p-button label="Login" severity="help"></p-button>
+                        <p-button [label]=" 'login' | translate " severity="help"></p-button>
                     </form>
                 </div>
-                <span>Or</span>
-                <p-button label="Create Account" severity="help" [text]="true"></p-button>
+                <span> {{ "or" | translate }} </span>
+                <p-button [label]=" 'createacc' | translate " severity="help" [text]="true"></p-button>
             </div>
         </div>
     </div>
 </header>
+
