--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,9 @@ $poppins: 'Poppins', sans-serif;
 
 //colors
 $primary: #A855F7;
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
