--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -23,3 +23,14 @@
         <app-image-slider [images]="images"></app-image-slider>
     </div>
 </div>
+<div class="vip-listings">
+    <span> <i class="pi pi-verified"></i> {{ 'vip' | translate }} </span>
+        <div class="card-container">
+            <app-property-card></app-property-card>
+            <app-property-card></app-property-card>
+            <app-property-card></app-property-card>
+            <app-property-card></app-property-card>
+            <app-property-card></app-property-card>
+            <app-property-card></app-property-card>
+        </div>
+</div>
