--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -138,3 +138,28 @@
         height: 200px;
     }
 }
+
+.vip-listings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 40px;
+    padding: 50px 0;
+
+    span {
+        font-family: $poppins;
+        font-weight: 700;
+        font-size: 25px;
+        margin-left: 20%;
+    }
+
+    .card-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        padding: 30px;
+    }
+}
