--- a/src/app/components/property-card/property-card.component.scss
+++ b/src/app/components/property-card/property-card.component.scss
@@ -8,8 +8,14 @@
     height: 450px;
     border: 0.08rem rgb(155, 154, 154) solid;
     border-radius: 20px;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgba($primary, 0.1); 
+    }
 
     .image {
+        position: relative;
         width: 100%;
         height: 50%;
 
@@ -17,6 +23,19 @@
             width: 100%;
             height: 100%;
             border-radius: 20px 20px 0 0;
+        }
+
+        .vip-logo {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: gold; 
+            color: black; 
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            font-size: 14px;
+            z-index: 1;
         }
     }
 
@@ -64,6 +83,7 @@
             display: flex;
             align-items: center;
             gap: 25px;
+            border-bottom: 0.07rem gray solid;
 
             .amenity{
                 display: flex;
