--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -143,7 +143,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     gap: 40px;
     padding: 50px 0;
 
@@ -151,7 +151,6 @@
         font-family: $poppins;
         font-weight: 700;
         font-size: 25px;
-        margin-left: 20%;
     }
 
     .card-container {
