--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div style="display: flex; flex-direction: column; min-height: 100vh;">
+    <app-header></app-header>
+      <main style="flex-grow: 1;">
+      <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+</div>
