--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -146,6 +146,7 @@
     align-items: center;
     gap: 40px;
     padding: 50px 0;
+    text-align: center;
 
     span {
         font-family: $poppins;
@@ -158,7 +159,11 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        gap: 30px;
-        padding: 30px;
+        gap: 40px;
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
     }
 }
