--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -128,14 +128,21 @@
 @media only screen and (max-width: 630px) {
     .slider-container {
         width: 400px;
-        height: 200px;
+        height: 250px;
     }
 }
 
 @media only screen and (max-width: 450px) {
     .slider-container {
+        width: 380px;
+        height: 250px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .slider-container {
         width: 300px;
-        height: 200px;
+        height: 250px;
     }
 }
 
