--- a/src/app/pages/property-page/property-page.component.scss
+++ b/src/app/pages/property-page/property-page.component.scss
@@ -169,6 +169,7 @@
         align-items: center;
         padding: 30px;
         gap: 50px;
+        text-align: center;
 
         span {
             font-family: $poppins;
@@ -182,6 +183,26 @@
             justify-content: center;
             align-items: center;
             gap: 50px;
+        }
+    }
+}
+
+@media only screen and (max-width: 1008px) {
+    .container {
+
+        .about {
+            padding: 30px;
+
+            .main-info {
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                gap: 30px;
+            }
+
+            .user {
+                flex-direction: column;
+            }
         }
     }
 }
