--- a/src/app/pages/user/user-login/user-login.component.scss
+++ b/src/app/pages/user/user-login/user-login.component.scss
@@ -37,5 +37,12 @@
                 }
             }
         }
+
+        .login-error {
+            font-weight: 400;
+            color: red;
+            font-family: $poppins;
+            font-size: 16px;
+        }
     }
 }
