--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -143,6 +143,13 @@ header {
                         font-size: 18px;
                     }
                 }
+
+                .login-error {
+                    font-family: $poppins;
+                    color: red;
+                    font-weight: 400;
+                    font-size: 16px;
+                }
             }
         }
         
