--- a/src/app/pages/user/user-register/user-register.component.html
+++ b/src/app/pages/user/user-register/user-register.component.html
@@ -39,7 +39,7 @@
                 <input pInputText type="password" [placeholder]=" 'repeatpass' | translate " formControlName="repeatPassword" />
             </div>
             <div class="submit-group">
-                <p-button [label]=" 'createacc' | translate " severity="help"></p-button>
+                <p-button [label]=" 'createacc' | translate " severity="help" (click)="register()"></p-button>
             </div>
             <a class="registered" routerLink="/user-login"> {{ 'registered' | translate }} </a>
         </form>
